--- a/index.html
+++ b/index.html
@@ -270,7 +270,11 @@
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => console.log('Success!', response))
+            .then(response => {
+                console.log('Success!', response);
+                window.location.reload();
+                alert('Thank you for your message!');
+            })
             .catch(error => console.error('Error!', error.message))
         })
       </script>
