--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     
     
     <div class="popup" id="popup">
-        <img src="img/tick.jpg" alt="">
+        <img src="face.jpg" alt="">
         <h2>  Thank You!</h2>
         <p> Your details has been successfully submitted .Thanks!  </p>
         <button type="button" onclick="closePopup()" >OK</button>
