--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <section class="about" id="about">
     <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
     <div class="about-img">
-        <img src="img/face.jpg" alt="">
+        <img src="face.jpg" alt="">
         <span class="circle-spin"></span>
         <span class="animate scroll" style="--i:2;"></span>
     </div>
