--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     
     
     <div class="popup" id="popup">
-        <img src="tick.jpg" alt="">
+        <img src="https://github.com/AfreenKn/portfolio/assets/169296614/b5f6c4fd-e0ed-4ee0-a677-07d28adf7440" alt="">
         <h2>  Thank You!</h2>
         <p> Your details has been successfully submitted .Thanks!  </p>
         <button type="button" onclick="closePopup()" >OK</button>
