--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="about-content">
         <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-        <p>As a second-year B.Tech CSE student, I am passionate about learning new programming languages and technologies. I am excited to explore new opportunities and gain practical experience in the field of computer science.
+        <p>I am a driven and detail-oriented B.Tech student in Computer Science and Engineering at Integral University, Lucknow, specializing in web development, database management, and programming. I have hands-on experience developing responsive websites using HTML, CSS, and JavaScript, and solving complex coding problems in SQL and Java. My academic journey has equipped me with a strong foundation in front-end preparing me to tackle various challenges in the tech industry. 
             <br> As a current college student with a solid foundation in SQL, Java,  HTML,CSS and JavaScript
             <span class="animate scroll" style="--i:4;"></span>
         </p>
@@ -157,6 +157,16 @@
                         <div class="bar"><span></span></div>
                     </div>
 
+                    <div class="progress">
+                        <h3>Node.js <span>80%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>MongoDB <span>60%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
                 </div>
                 <span class="animate scroll" style="--i:3;"></span>
             </div>
@@ -194,10 +204,7 @@
                         <div class="bar"><span></span></div>
                     </div>
 
-                    <div class="progress">
-                        <h3>Web Design <span>60%</span></h3>
-                        <div class="bar"><span></span></div>
-                    </div>
+                    
 
                 </div>
                 <span class="animate scroll" style="--i:6;"></span> 
